@@ -1,7 +1,7 @@
 package org.sherman.cluster.service;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Range;
+import java.util.List;
 import org.sherman.cluster.domain.ServerNode;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,22 +16,22 @@ public class CassandraLikeStorageTest {
 
     @Test
     public void smallTokenNumber() {
-        ServerStorage serverStorage = new ServerStorageImpl(
-            ImmutableList.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
+        var serverStorage = new ServerStorageImpl(
+            List.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
         );
 
-        CassandraLikeStorage<Long> storage = new CassandraLikeStorageImpl(serverStorage, Range.closed(0L, 100L), 4);
+        var storage = new CassandraLikeStorageImpl(serverStorage, Range.closed(0L, 100L), 4);
     }
 
     @Test
     public void initialTokenGeneration() {
-        ServerStorage serverStorage = new ServerStorageImpl(
-            ImmutableList.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
+        var serverStorage = new ServerStorageImpl(
+            List.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
         );
 
-        CassandraLikeStorage<Long> storage = new CassandraLikeStorageImpl(serverStorage, Range.closed(Long.MIN_VALUE, Long.MAX_VALUE), 256);
+        var storage = new CassandraLikeStorageImpl(serverStorage, Range.closed(Long.MIN_VALUE, Long.MAX_VALUE), 256);
 
-        for (int i = 0; i < 1024 * 1024; i++) {
+        for (var i = 0; i < 1024 * 1024; i++) {
             storage.putKey(String.valueOf(i));
 
             if (i % 1024 == 0) {
@@ -44,11 +44,11 @@ public class CassandraLikeStorageTest {
 
     @Test
     public void rebalance() {
-        ServerStorage serverStorage = new ServerStorageImpl(
-            ImmutableList.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
+        var serverStorage = new ServerStorageImpl(
+            List.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
         );
 
-        CassandraLikeStorage<Long> storage = new CassandraLikeStorageImpl(serverStorage, Range.closed(Long.MIN_VALUE, Long.MAX_VALUE), 256);
+        var storage = new CassandraLikeStorageImpl(serverStorage, Range.closed(Long.MIN_VALUE, Long.MAX_VALUE), 256);
         //CassandraLikeStorage<Long> storage = new CassandraLikeStorageImpl(serverStorage, Range.closed(0L, 1000000L), 16);
 
         log.info("Ranges per node: {}", storage.getRangeDistribution());
@@ -57,7 +57,7 @@ public class CassandraLikeStorageTest {
 
         log.info("Ranges per node: {}", storage.getRangeDistribution());
 
-        for (int i = 0; i < 1024 * 1024; i++) {
+        for (var i = 0; i < 1024 * 1024; i++) {
             storage.putKey(String.valueOf(i));
 
             if (i % 1024 == 0) {
