@@ -1,7 +1,7 @@
 package org.sherman.cluster.service;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Range;
+import java.util.List;
 import org.sherman.cluster.domain.ServerNode;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,13 +16,13 @@ public class HbaseStyleStorageTest {
 
     @Test
     public void splitExample() {
-        ServerStorage serverStorage = new ServerStorageImpl(
-            ImmutableList.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
+        var serverStorage = new ServerStorageImpl(
+            List.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
         );
 
-        HbaseStyleStorage<Long> hbaseStorage = new HbaseStyleStorageImpl(serverStorage, Range.closed(0L, Long.MAX_VALUE), 1024);
+        var hbaseStorage = new HbaseStyleStorageImpl(serverStorage, Range.closed(0L, Long.MAX_VALUE), 1024);
 
-        for (int i = 0; i < 1024 * 1024; i++) {
+        for (var i = 0; i < 1024 * 1024; i++) {
             hbaseStorage.putKey((long) i);
 
             if (i % 1024 == 0) {
