@@ -3,8 +3,8 @@ package org.sherman.cluster.service;
 import static org.sherman.cluster.domain.Role.LEADER;
 import static org.sherman.cluster.domain.Role.STANDBY;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import java.util.List;
+import java.util.Map;
 import org.sherman.cluster.domain.Job;
 import org.sherman.cluster.domain.LeaderReplicaDistribution;
 import org.sherman.cluster.domain.Role;
@@ -19,34 +19,34 @@ public class LeaderReplicaDistributionServiceTest {
 
     @Test
     public void case1() {
-        LeaderReplicaDistributionService distributionService = new LeaderReplicaDistributionServiceImpl();
+        var distributionService = new LeaderReplicaDistributionServiceImpl();
 
         Assert.assertEquals(
             distributionService.distribute(
                 new LeaderReplicaDistribution(
-                    ImmutableList.of(new Job("index_1", 40), new Job("index_2", 40)),
+                    List.of(new Job("index_1", 40), new Job("index_2", 40)),
                     2,
-                    ImmutableList.of(0, 1, 2, 3),
+                    List.of(0, 1, 2, 3),
                     90
                 )
             ),
-            ImmutableMap.of(
-                0, ImmutableList.of(new RoleAwareJob(Role.LEADER, new Job("index_1", 40))),
-                1, ImmutableList.of(new RoleAwareJob(Role.LEADER, new Job("index_2", 40))),
-                2, ImmutableList.of(new RoleAwareJob(Role.STANDBY, new Job("index_1", 40))),
-                3, ImmutableList.of(new RoleAwareJob(Role.STANDBY, new Job("index_2", 40)))
+            Map.of(
+                0, List.of(new RoleAwareJob(Role.LEADER, new Job("index_1", 40))),
+                1, List.of(new RoleAwareJob(Role.LEADER, new Job("index_2", 40))),
+                2, List.of(new RoleAwareJob(Role.STANDBY, new Job("index_1", 40))),
+                3, List.of(new RoleAwareJob(Role.STANDBY, new Job("index_2", 40)))
             )
         );
     }
 
     @Test
     public void case2() {
-        LeaderReplicaDistributionService distributionService = new LeaderReplicaDistributionServiceImpl();
+        var distributionService = new LeaderReplicaDistributionServiceImpl();
 
         Assert.assertEquals(
             distributionService.distribute(
                 new LeaderReplicaDistribution(
-                    ImmutableList.of(
+                    List.of(
                         new Job("index_1", 40),
                         new Job("index_2", 40),
                         new Job("index_3", 40),
@@ -54,26 +54,26 @@ public class LeaderReplicaDistributionServiceTest {
                         new Job("index_5", 10)
                     ),
                     2,
-                    ImmutableList.of(0, 1, 2, 3),
+                    List.of(0, 1, 2, 3),
                     90
                 )
             ),
-            ImmutableMap.of(
-                0, ImmutableList.of(
+            Map.of(
+                0, List.of(
                     new RoleAwareJob(Role.LEADER, new Job("index_1", 40)),
                     new RoleAwareJob(Role.LEADER, new Job("index_5", 10)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_4", 40))
                 ),
-                1, ImmutableList.of(
+                1, List.of(
                     new RoleAwareJob(Role.LEADER, new Job("index_2", 40)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_1", 40)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_5", 10))
                 ),
-                2, ImmutableList.of(
+                2, List.of(
                     new RoleAwareJob(Role.LEADER, new Job("index_3", 40)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_2", 40))
                 ),
-                3, ImmutableList.of(
+                3, List.of(
                     new RoleAwareJob(Role.LEADER, new Job("index_4", 40)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_3", 40))
                 )
@@ -83,12 +83,12 @@ public class LeaderReplicaDistributionServiceTest {
 
     @Test
     public void case3() {
-        LeaderReplicaDistributionService distributionService = new LeaderReplicaDistributionServiceImpl();
+        var distributionService = new LeaderReplicaDistributionServiceImpl();
 
         Assert.assertEquals(
             distributionService.distribute(
                 new LeaderReplicaDistribution(
-                    ImmutableList.of(
+                    List.of(
                         new Job("index_1_1", 40),
                         new Job("index_1_2", 40),
                         new Job("index_1_3", 40),
@@ -101,18 +101,18 @@ public class LeaderReplicaDistributionServiceTest {
                         new Job("index_4", 4)
                     ),
                     2,
-                    ImmutableList.of(0, 1, 2, 3),
+                    List.of(0, 1, 2, 3),
                     90
                 )
             ),
-            ImmutableMap.of(
-                0, ImmutableList.of(
+            Map.of(
+                0, List.of(
                     new RoleAwareJob(Role.LEADER, new Job("index_1_1", 40)),
                     new RoleAwareJob(Role.LEADER, new Job("index_2", 10)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_1_4", 40)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_3_3", 4))
                 ),
-                1, ImmutableList.of(
+                1, List.of(
                     new RoleAwareJob(Role.LEADER, new Job("index_1_2", 40)),
                     new RoleAwareJob(Role.LEADER, new Job("index_3_1", 4)),
                     new RoleAwareJob(Role.LEADER, new Job("index_3_4", 4)),
@@ -120,7 +120,7 @@ public class LeaderReplicaDistributionServiceTest {
                     new RoleAwareJob(Role.STANDBY, new Job("index_3_2", 4)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_4", 4))
                 ),
-                2, ImmutableList.of(
+                2, List.of(
                     new RoleAwareJob(Role.LEADER, new Job("index_1_3", 40)),
                     new RoleAwareJob(Role.LEADER, new Job("index_3_2", 4)),
                     new RoleAwareJob(Role.LEADER, new Job("index_4", 4)),
@@ -129,7 +129,7 @@ public class LeaderReplicaDistributionServiceTest {
                     new RoleAwareJob(Role.STANDBY, new Job("index_3_4", 4))
 
                 ),
-                3, ImmutableList.of(
+                3, List.of(
                     new RoleAwareJob(Role.LEADER, new Job("index_1_4", 40)),
                     new RoleAwareJob(Role.LEADER, new Job("index_3_3", 4)),
                     new RoleAwareJob(Role.STANDBY, new Job("index_1_1", 40)),
@@ -141,12 +141,12 @@ public class LeaderReplicaDistributionServiceTest {
 
     @Test
     public void case4() {
-        LeaderReplicaDistributionService distributionService = new LeaderReplicaDistributionServiceImpl();
+        var distributionService = new LeaderReplicaDistributionServiceImpl();
 
         // first iteration, add 8-shard index
         var step1 = distributionService.distribute(
             new LeaderReplicaDistribution(
-                ImmutableList.of(
+                List.of(
                     new Job("index_1_1", 40),
                     new Job("index_1_2", 40),
                     new Job("index_1_3", 40),
@@ -157,49 +157,49 @@ public class LeaderReplicaDistributionServiceTest {
                     new Job("index_1_8", 40)
                 ),
                 2,
-                ImmutableList.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9),
+                List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9),
                 90
             )
         );
 
         Assert.assertEquals(
             step1,
-            ImmutableMap.of(
-                0, ImmutableList.of(
+            Map.of(
+                0, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_1", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_1_3", 40))
                 ),
-                1, ImmutableList.of(
+                1, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_2", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_1_4", 40))
                 ),
-                2, ImmutableList.of(
+                2, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_3", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_1_5", 40))
                 ),
-                3, ImmutableList.of(
+                3, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_4", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_1_6", 40))
                 ),
-                4, ImmutableList.of(
+                4, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_5", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_1_7", 40))
                 ),
-                5, ImmutableList.of(
+                5, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_6", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_1_8", 40))
 
                 ),
-                6, ImmutableList.of(
+                6, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_7", 40))
                 ),
-                7, ImmutableList.of(
+                7, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_8", 40))
                 ),
-                8, ImmutableList.of(
+                8, List.of(
                     new RoleAwareJob(STANDBY, new Job("index_1_1", 40))
                 ),
-                9, ImmutableList.of(
+                9, List.of(
                     new RoleAwareJob(STANDBY, new Job("index_1_2", 40))
                 )
             )
@@ -207,7 +207,7 @@ public class LeaderReplicaDistributionServiceTest {
 
         var step2 = distributionService.distribute(
             new LeaderReplicaDistribution(
-                ImmutableList.of(
+                List.of(
                     new Job("index_1_1", 4),
                     new Job("index_1_2", 4),
                     new Job("index_1_3", 4),
@@ -226,65 +226,65 @@ public class LeaderReplicaDistributionServiceTest {
                     new Job("index_2_8", 40)
                 ),
                 2,
-                ImmutableList.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9),
+                List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9),
                 90
             )
         );
 
         Assert.assertEquals(
             step2,
-            ImmutableMap.of(
-                0, ImmutableList.of(
+            Map.of(
+                0, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_1", 4)),
                     new RoleAwareJob(LEADER, new Job("index_2_3", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_5", 40))
                 ),
-                1, ImmutableList.of(
+                1, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_2", 4)),
                     new RoleAwareJob(LEADER, new Job("index_2_4", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_6", 40))
                 ),
-                2, ImmutableList.of(
+                2, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_3", 4)),
                     new RoleAwareJob(LEADER, new Job("index_2_5", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_7", 40))
                 ),
-                3, ImmutableList.of(
+                3, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_4", 4)),
                     new RoleAwareJob(LEADER, new Job("index_2_6", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_8", 40))
                 ),
-                4, ImmutableList.of(
+                4, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_5", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_7", 40))
                 ),
-                5, ImmutableList.of(
+                5, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_6", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_8", 40))
 
                 ),
-                6, ImmutableList.of(
+                6, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_7", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_1_1", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_1_3", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_1_5", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_1_7", 4))
                 ),
-                7, ImmutableList.of(
+                7, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_8", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_1_2", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_1_4", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_1_6", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_1_8", 4))
                 ),
-                8, ImmutableList.of(
+                8, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_1", 4)),
                     new RoleAwareJob(LEADER, new Job("index_1_3", 4)),
                     new RoleAwareJob(LEADER, new Job("index_1_5", 4)),
                     new RoleAwareJob(LEADER, new Job("index_1_7", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_2_1", 40))
                 ),
-                9, ImmutableList.of(
+                9, List.of(
                     new RoleAwareJob(LEADER, new Job("index_1_2", 4)),
                     new RoleAwareJob(LEADER, new Job("index_1_4", 4)),
                     new RoleAwareJob(LEADER, new Job("index_1_6", 4)),
@@ -296,7 +296,7 @@ public class LeaderReplicaDistributionServiceTest {
 
         var step3 = distributionService.distribute(
             new LeaderReplicaDistribution(
-                ImmutableList.of(
+                List.of(
                     new Job("index_1_1", 4),
                     new Job("index_1_2", 4),
                     new Job("index_1_3", 4),
@@ -317,39 +317,39 @@ public class LeaderReplicaDistributionServiceTest {
                     new Job("index_3_2", 10)
                 ),
                 2,
-                ImmutableList.of(0, 1, 2, 3, 4, 5, 6, 7, 8),
+                List.of(0, 1, 2, 3, 4, 5, 6, 7, 8),
                 90
             )
         );
 
         Assert.assertEquals(
             step3,
-            ImmutableMap.of(
-                0, ImmutableList.of(
+            Map.of(
+                0, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_1", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_3", 40))
                 ),
-                1, ImmutableList.of(
+                1, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_2", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_4", 40))
                 ),
-                2, ImmutableList.of(
+                2, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_3", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_5", 40))
                 ),
-                3, ImmutableList.of(
+                3, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_4", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_6", 40))
                 ),
-                4, ImmutableList.of(
+                4, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_5", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_7", 40))
                 ),
-                5, ImmutableList.of(
+                5, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_6", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_2_8", 40))
                 ),
-                6, ImmutableList.of(
+                6, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_7", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_3_1", 10)),
                     new RoleAwareJob(STANDBY, new Job("index_1_1", 4)),
@@ -357,7 +357,7 @@ public class LeaderReplicaDistributionServiceTest {
                     new RoleAwareJob(STANDBY, new Job("index_1_5", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_1_7", 4))
                 ),
-                7, ImmutableList.of(
+                7, List.of(
                     new RoleAwareJob(LEADER, new Job("index_2_8", 40)),
                     new RoleAwareJob(STANDBY, new Job("index_3_2", 10)),
                     new RoleAwareJob(STANDBY, new Job("index_1_2", 4)),
@@ -365,7 +365,7 @@ public class LeaderReplicaDistributionServiceTest {
                     new RoleAwareJob(STANDBY, new Job("index_1_6", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_1_8", 4))
                 ),
-                8, ImmutableList.of(
+                8, List.of(
                     new RoleAwareJob(LEADER, new Job("index_3_1", 10)),
                     new RoleAwareJob(LEADER, new Job("index_1_1", 4)),
                     new RoleAwareJob(LEADER, new Job("index_1_3", 4)),
@@ -373,7 +373,7 @@ public class LeaderReplicaDistributionServiceTest {
                     new RoleAwareJob(LEADER, new Job("index_1_7", 4)),
                     new RoleAwareJob(STANDBY, new Job("index_2_1", 40))
                 ),
-                9, ImmutableList.of(
+                9, List.of(
                     new RoleAwareJob(LEADER, new Job("index_3_2", 10)),
                     new RoleAwareJob(LEADER, new Job("index_1_2", 4)),
                     new RoleAwareJob(LEADER, new Job("index_1_4", 4)),
