@@ -19,33 +19,30 @@ package org.sherman.cluster.service;
  * limitations under the License.
  */
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Range;
+import java.util.HashMap;
+import java.util.List;
+import java.util.concurrent.ThreadLocalRandom;
+import java.util.concurrent.atomic.AtomicInteger;
 import org.sherman.cluster.domain.ServerNode;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.testng.annotations.Test;
-
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Random;
-import java.util.concurrent.ThreadLocalRandom;
-import java.util.concurrent.atomic.AtomicInteger;
 
 public class LongRangedShardingServiceTest {
     private static final Logger log = LoggerFactory.getLogger(LongRangedShardingServiceTest.class);
 
     @Test
     public void getByKeyBadExample() {
-        ServerStorage serverStorage = new ServerStorageImpl(
-            ImmutableList.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
+        var serverStorage = new ServerStorageImpl(
+            List.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
         );
 
-        RangedShardingService<Long> shardingService = new LongRangedShardingService(serverStorage, Range.closed(0L, Long.MAX_VALUE));
+        var shardingService = new LongRangedShardingService(serverStorage, Range.closed(0L, Long.MAX_VALUE));
 
-        Map<ServerNode, AtomicInteger> distribution = new HashMap<>();
-        for (int i = 0; i < 1024 * 1024; i++) {
-            ServerNode serverNode = shardingService.getNodeByKey((long) i);
+        var distribution = new HashMap<ServerNode, AtomicInteger>();
+        for (var i = 0; i < 1024 * 1024; i++) {
+            var serverNode = shardingService.getNodeByKey((long) i);
             distribution.putIfAbsent(serverNode, new AtomicInteger());
             distribution.get(serverNode).incrementAndGet();
         }
@@ -55,17 +52,17 @@ public class LongRangedShardingServiceTest {
 
     @Test
     public void getByKeyGoodExample() {
-        ServerStorage serverStorage = new ServerStorageImpl(
-            ImmutableList.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
+        var serverStorage = new ServerStorageImpl(
+            List.of(new ServerNode("1", "192.168.5.1"), new ServerNode("2", "192.168.5.2"), new ServerNode("3", "192.168.5.3"))
         );
 
-        RangedShardingService<Long> shardingService = new LongRangedShardingService(serverStorage, Range.closed(0L, Long.MAX_VALUE));
+        var shardingService = new LongRangedShardingService(serverStorage, Range.closed(0L, Long.MAX_VALUE));
 
-        ThreadLocalRandom random = ThreadLocalRandom.current();
+        var random = ThreadLocalRandom.current();
 
-        Map<ServerNode, AtomicInteger> distribution = new HashMap<>();
-        for (int i = 0; i < 1024 * 1024; i++) {
-            ServerNode serverNode = shardingService.getNodeByKey(random.nextLong(0, Long.MAX_VALUE));
+        var distribution = new HashMap<ServerNode, AtomicInteger>();
+        for (var i = 0; i < 1024 * 1024; i++) {
+            var serverNode = shardingService.getNodeByKey(random.nextLong(0, Long.MAX_VALUE));
             distribution.putIfAbsent(serverNode, new AtomicInteger());
             distribution.get(serverNode).incrementAndGet();
         }
